tests/exposure_test_with_anp_13/policies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: exposure-example-13
spec:
  priority: 10
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: hello-world
      podSelector:
        matchLabels:
          app: a-app
  egress:
  - name: "deny-all-to-all-networks"
    action: "Deny"
    to:
    - networks:
      - 0.0.0.0/0
  - name: "allow-tcp80-to-labeled-pods-in-new-ns"
    action: "Allow"
    to:
    - pods:
        namespaceSelector: 
          matchLabels:
            kubernetes.io/metadata.name: new-ns
        podSelector:
          matchLabels:
            app: new-app          
    ports:
    - portNumber:
        port: 80
        protocol: TCP    
  ingress:
  - name: "allow-tcp9090-from-pods-in-existing-namespace"
    action: "Allow"
    from:
    - pods:
        namespaceSelector: 
          matchLabels:
            kubernetes.io/metadata.name: hello-world
    ports:
    - portNumber:
        port: 9090
        protocol: TCP
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: hello-world
      podSelector:
        matchLabels:
          app: a-app
  ingress:
  - name: "deny-all-internal-connections-ingress"
    action: "Deny"
    from:
    - pods:
        namespaceSelector: {}
        podSelector: {}
  egress:
  - name: "deny-all-internal-connections-egress"
    action: "Deny"
    to:
    - pods:
        namespaceSelector: {}
        podSelector: {}
